--- a/.github/workflows/node.js.yaml
+++ b/.github/workflows/node.js.yaml
@@ -26,5 +26,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - run: npm ci
+    - run: npm run build
+    - run: npm link
     - run:  git-repo-to-json  https://github.com/arnab2001/css-modules-transformer
     
