--- a/package.json
+++ b/package.json
@@ -5,21 +5,26 @@
   "bin": {
     "git-repo-to-json": "dist/cli.js"
   },
-  
+  "files": [
+    "dist"
+  ],
   "main": "index.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/cli.js"
   },
-
-  "keywords": ["github", "scraper", "json"],
+  "keywords": [
+    "github",
+    "scraper",
+    "json"
+  ],
   "author": "arnab2001",
   "license": "MIT",
   "dependencies": {
     "simple-git": "^2.41.0"
   },
   "devDependencies": {
-    "typescript": "^4.9.4",
-    "@types/node": "^18.11.19"
+    "@types/node": "^18.11.19",
+    "typescript": "^4.9.4"
   }
 }
