--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,6 @@
     "outDir": "./dist",
     "strict": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "node_modules/git-repo-to-json/src/**/*.ts"],
   "exclude": ["node_modules"]
 }
