--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "git-repo-to-json",
-  "version": "2.0.5",
+  "name": "git-repo-parser",
+  "version": "2.0.6",
   "description": "A tool to scrape all files from a GitHub repository and turn it into a JSON file",
   "bin": {
-    "git-repo-to-json": "dist/cli.js"
+    "git-repo-to-json": "dist/clijson.js",
+    "git-repo-to-text": "dist/clitext.js"
   },
   "files": [
     "dist"
