--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A tool to scrape all files from a GitHub repository and turn it into a JSON file",
   "bin": {
     "git-repo-to-json": "dist/clijson.js",
-    "git-repo-to-text": "dist/clitext.js"
+    "git-repo-to-text": "dist/clitext.js",
+    "git-repo-to-toon": "dist/clitoon.js"
   },
   "files": [
     "dist"
@@ -12,7 +13,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/cli.js"
+    "start": "node dist/cli.js",
+    "benchmark": "node benchmark/benchmark.js"
   },
   "keywords": [
     "github",
@@ -22,10 +24,12 @@
   "author": "arnab2001",
   "license": "MIT",
   "dependencies": {
+    "@toon-format/toon": "^0.8.0",
+    "gpt-tokenizer": "^3.4.0",
     "simple-git": "^2.41.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.19",
-    "typescript": "^4.9.4"
+    "typescript": "^5.4.5"
   }
 }
